[gd_scene load_steps=8 format=2]

[ext_resource path="res://InterfaceController.gd" type="Script" id=1]
[ext_resource path="res://Image/MENU_ELEMENTS_3.png" type="Texture" id=2]
[ext_resource path="res://Image/RestartButton.png" type="Texture" id=3]
[ext_resource path="res://Image/MenuButton.png" type="Texture" id=4]
[ext_resource path="res://Image/NextButton.png" type="Texture" id=5]
[ext_resource path="res://Image/MENU_ELEMENTS_1.png" type="Texture" id=6]
[ext_resource path="res://Image/MENU_ELEMENTS_2.png" type="Texture" id=7]

[node name="InterfaceController" type="CanvasLayer" groups=["InterfaceController"]]
script = ExtResource( 1 )

[node name="InterfaceController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -882.0
margin_bottom = -560.0

[node name="ScoreLabel" type="RichTextLabel" parent="InterfaceController"]
margin_left = 29.0
margin_top = 20.0
margin_right = 216.0
margin_bottom = 60.0
text = "Score:"

[node name="ScoreValue" type="RichTextLabel" parent="InterfaceController"]
margin_left = 69.0
margin_top = 20.0
margin_right = 256.0
margin_bottom = 60.0

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="RichTextLabel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 19.0
margin_right = -3.0
margin_bottom = 59.0
text = "Score:"

[node name="ScoreValue" type="RichTextLabel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = 19.0
margin_right = 37.0
margin_bottom = 59.0
text = "1000"

[node name="Star1" type="TextureRect" parent="Popup"]
visible = false
margin_left = -4.0
margin_top = 56.0
margin_right = 91.0
margin_bottom = 159.0
texture = ExtResource( 6 )
expand = true

[node name="Star2" type="TextureRect" parent="Popup"]
visible = false
margin_left = 93.0
margin_top = 67.0
margin_right = 213.0
margin_bottom = 194.0
texture = ExtResource( 7 )
expand = true

[node name="Star3" type="TextureRect" parent="Popup"]
visible = false
margin_left = 213.0
margin_top = 53.0
margin_right = 309.0
margin_bottom = 179.0
texture = ExtResource( 2 )
expand = true

[node name="WinLose" type="RichTextLabel" parent="Popup"]
margin_left = 102.0
margin_top = 30.0
margin_right = 257.0
margin_bottom = 70.0
text = "Level Complite"
deselect_on_focus_loss_enabled = false

[node name="NextLevelButton" type="Button" parent="Popup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -106.0
margin_right = -29.0
margin_bottom = -63.0
text = "Next"

[node name="Next" type="Sprite" parent="Popup/NextLevelButton"]
position = Vector2( 24.875, 22.875 )
scale = Vector2( 0.752604, 0.705729 )
texture = ExtResource( 5 )

[node name="RestartLevelButton" type="Button" parent="Popup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -179.0
margin_top = -106.0
margin_right = -122.0
margin_bottom = -63.0
text = "Restart"

[node name="Sprite" type="Sprite" parent="Popup/RestartLevelButton"]
position = Vector2( 29.75, 23.5 )
scale = Vector2( 0.785, 0.762376 )
texture = ExtResource( 3 )

[node name="MenuButton" type="Button" parent="Popup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.0
margin_top = -105.0
margin_right = -225.0
margin_bottom = -62.0
text = "Menu"

[node name="Menu" type="Sprite" parent="Popup/MenuButton"]
position = Vector2( 27, 22 )
scale = Vector2( 0.830189, 0.790477 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="Popup/NextLevelButton" to="." method="_on_NextLevelButton_button_down"]
[connection signal="button_down" from="Popup/RestartLevelButton" to="." method="_on_RestartLevelButton_button_down"]
[connection signal="button_down" from="Popup/MenuButton" to="." method="_on_MenuButton_button_down"]
